--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>S. Ramanujan</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <divMain>
+        <h1>Srinivasa Ramanujan</h1>
+        <p>The Greatest Mathematician</p>
+        <img src="TributePage\THEF26SRINIVASARAM.jfif" alt="Picture of Ramanujan">
+    </divMain>
 </body>
 </html>
