--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>S. Ramanujan</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -11,7 +9,10 @@
     <divMain>
         <h1>Srinivasa Ramanujan</h1>
         <p>The Greatest Mathematician</p>
-        <img src="TributePage\THEF26SRINIVASARAM.jfif" alt="Picture of Ramanujan">
+        <imageContainer>
+            <img src="S ramanujan.jpg" alt="Picture of Ramanujan">
+        </imageContainer>
+        
     </divMain>
 </body>
 </html>
