Added picture of S. Ramanujan

--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>S. Ramanujan</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <divMain>
-        <h1>Srinivasa Ramanujan</h1>
-        <p>The Greatest Mathematician</p>
-        <imageContainer>
-            <img src="S ramanujan.jpg" alt="Picture of Ramanujan">
-        </imageContainer>
-        
-    </divMain>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>S. Ramanujan</title>
+        <link rel="stylesheet" href="styles.css">   
+    </head>
+    <body>
+        <divMain>
+            <h1>Srinivasa Ramanujan</h1>
+            <p>The Greatest Mathematician</p>
+            <imageContainer>
+                <img class="image" src="S ramanujan.jpg" alt="Picture of Ramanujan">
+            </imageContainer>
+        </divMain>
+    </body>
 </html>
