Added S Ramanujans life timeline.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,49 @@
     <body>
         <divMain>
             <h1>Srinivasa Ramanujan</h1>
-            <p>The Greatest Mathematician</p>
+            <p>The Man who knew Infinity.</p>
             <imageContainer>
                 <img class="image" src="S ramanujan.jpg" alt="Picture of Ramanujan">
             </imageContainer>
+            <h2>
+                Here's a time line of S. Ramnujan's life:
+            </h2>
+            <ul>
+                <li><b>1903-</b>
+                <p>Passes Matriculation examination from Town High School, Kumbakonam</p></li>
+                <li><b>1904-</b>
+                <p>Joins Government Arts College, Kumbakonam</p></li>
+                <li><b>1905-</b>
+                <p>Drops out of Kumbakonam college</p></li>
+                <li><b>1906-</b>
+                <p>Joins Pachaiyappas College, Madras, only to leave without completing his studies</p></li>
+                <li><b>1911-</b>
+                <p>Publishes first paper on Bernoulli Numbers</p></li>
+                <li><b>1912-</b>
+                <p>Gets a job at the Madras Port Trust</p>
+                <p>Ramanujan is introduced to G.H. Hardy’s tract on ‘Orders of Infinity.’ He provides an answer to one of the problems posed by Hardy</p></li>
+                <li><b>1913-</b>
+                <p>Ramanujan writes his first letter to Hardy</p>
+                <p>Hardy recognises Ramanujan as a mathemacian of the highest class, and tries to organise a visit by Ramanujan to England</p></li>
+                <li><b>1914-</b>
+                <p>E.H. Neville, a Fellow of Trinity College, Cambridge meets Ramanujan in Madras and convinces him to go to Cambridge</p>
+                <p>Neville writes to University of Madras to support Ramanujan</p>
+                <p>University of Madras offers Ramanujan scholarship</p><p>On March 17, leaves for England</p></li>
+                <li><b>1916-</b>
+                <p>Gets B.A. degree by research from Cambridge University</p></li>
+                <li><b>1917-</b>
+                <p>Periodically hospitalised for treatment</p>
+                <li><b>1918</b>
+                <p>Becomes Fellow of the Royal Society</p>
+                <p>Elected to Trinity College Fellowship</p></li>
+                <li><b>1919-</b>
+                <p>Returns to India</p> </li>                   
+                <li><b>1920-</b>
+                <p>Health deteriorates</p>
+                <p>Dies on April 26, 1920</p></li>
+                <li><b>1927-</b>
+                <p>Collected papers of Ramanujan, edited by P.V. Seshu Aiyar, G.H. Hardy and B.M. Wilson and published by Cambridge University Press</p></li>
+            </ul>
         </divMain>
     </body>
 </html>
