Added quote and Wikipedia link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <img class="image" src="S ramanujan.jpg" alt="Picture of Ramanujan">
             </imageContainer>
             <h2>
-                Here's a time line of S. Ramnujan's life:
+                Here's a time line of S. Ramanujan's life:
             </h2>
             <ul>
                 <li><b>1903-</b>
@@ -51,6 +51,9 @@
                 <li><b>1927-</b>
                 <p>Collected papers of Ramanujan, edited by P.V. Seshu Aiyar, G.H. Hardy and B.M. Wilson and published by Cambridge University Press</p></li>
             </ul>
+            <i class="quote">There is always more in one of Ramanujans formulae than meets the eye, as anyone who sets to work to verify those which look the easiest will soon discover. In some the interest lies very deep, in others comparatively near the surface; but there is not one which is not curious and entertaining.<div class="name">   -G. H. Hardy</div></i>
+            <div class="wikilink">Learn more about him at <a href="https://en.wikipedia.org/wiki/Srinivasa_Ramanujan">Wikipedia</a></div>
+            
         </divMain>
     </body>
 </html>
